crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@86.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c, t3.a + t3.b, t3.c FROM (prt1 t1 LEFT JOIN prt2 t2 ON t1.a = t2.b) RIGHT JOIN prt1_e t3 ON (t1.a = (t3.a + t3.b)/2) WHERE t3.c = 0 ORDER BY t1.a, t2.b, t3.a + t3.b;"
---
SelectStmt@0..194
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..42
    AExpr@31..42
      ColumnRef@31..35
        Ident@31..33 "t3"
        Ascii46@33..34 "."
        Ident@34..35 "a"
      Whitespace@35..36 " "
      Ascii43@36..37 "+"
      Whitespace@37..38 " "
      ColumnRef@38..42
        Ident@38..40 "t3"
        Ascii46@40..41 "."
        Ident@41..42 "b"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ResTarget@44..48
    ColumnRef@44..48
      Ident@44..46 "t3"
      Ascii46@46..47 "."
      Ident@47..48 "c"
  Whitespace@48..49 " "
  From@49..53 "FROM"
  Whitespace@53..54 " "
  Ascii40@54..55 "("
  JoinExpr@55..144
    JoinExpr@55..95
      RangeVar@55..62
        Ident@55..59 "prt1"
        Whitespace@59..60 " "
        Alias@60..62
          Ident@60..62 "t1"
      Whitespace@62..63 " "
      Left@63..67 "LEFT"
      Whitespace@67..68 " "
      Join@68..72 "JOIN"
      Whitespace@72..73 " "
      RangeVar@73..80
        Ident@73..77 "prt2"
        Whitespace@77..78 " "
        Alias@78..80
          Ident@78..80 "t2"
      Whitespace@80..81 " "
      On@81..83 "ON"
      Whitespace@83..84 " "
      AExpr@84..95
        ColumnRef@84..88
          Ident@84..86 "t1"
          Ascii46@86..87 "."
          Ident@87..88 "a"
        Whitespace@88..89 " "
        Ascii61@89..90 "="
        Whitespace@90..91 " "
        ColumnRef@91..95
          Ident@91..93 "t2"
          Ascii46@93..94 "."
          Ident@94..95 "b"
    Ascii41@95..96 ")"
    Whitespace@96..97 " "
    Right@97..102 "RIGHT"
    Whitespace@102..103 " "
    Join@103..107 "JOIN"
    Whitespace@107..108 " "
    RangeVar@108..117
      Ident@108..114 "prt1_e"
      Whitespace@114..115 " "
      Alias@115..117
        Ident@115..117 "t3"
    Whitespace@117..118 " "
    On@118..120 "ON"
    Whitespace@120..121 " "
    Ascii40@121..122 "("
    AExpr@122..144
      ColumnRef@122..126
        Ident@122..124 "t1"
        Ascii46@124..125 "."
        Ident@125..126 "a"
      Whitespace@126..127 " "
      Ascii61@127..128 "="
      Whitespace@128..129 " "
      Ascii40@129..130 "("
      AExpr@130..144
        AExpr@130..141
          ColumnRef@130..134
            Ident@130..132 "t3"
            Ascii46@132..133 "."
            Ident@133..134 "a"
          Whitespace@134..135 " "
          Ascii43@135..136 "+"
          Whitespace@136..137 " "
          ColumnRef@137..141
            Ident@137..139 "t3"
            Ascii46@139..140 "."
            Ident@140..141 "b"
        Ascii41@141..142 ")"
        Ascii47@142..143 "/"
        AConst@143..144
          Iconst@143..144 "2"
  Ascii41@144..145 ")"
  Whitespace@145..146 " "
  Where@146..151 "WHERE"
  Whitespace@151..152 " "
  AExpr@152..160
    ColumnRef@152..156
      Ident@152..154 "t3"
      Ascii46@154..155 "."
      Ident@155..156 "c"
    Whitespace@156..157 " "
    Ascii61@157..158 "="
    Whitespace@158..159 " "
    AConst@159..160
      Iconst@159..160 "0"
  Whitespace@160..161 " "
  SortBy@161..174
    Order@161..166 "ORDER"
    Whitespace@166..167 " "
    By@167..169 "BY"
    Whitespace@169..170 " "
    ColumnRef@170..174
      Ident@170..172 "t1"
      Ascii46@172..173 "."
      Ident@173..174 "a"
  Ascii44@174..175 ","
  Whitespace@175..176 " "
  SortBy@176..180
    ColumnRef@176..180
      Ident@176..178 "t2"
      Ascii46@178..179 "."
      Ident@179..180 "b"
  Ascii44@180..181 ","
  Whitespace@181..182 " "
  SortBy@182..193
    AExpr@182..193
      ColumnRef@182..186
        Ident@182..184 "t3"
        Ascii46@184..185 "."
        Ident@185..186 "a"
      Whitespace@186..187 " "
      Ascii43@187..188 "+"
      Whitespace@188..189 " "
      ColumnRef@189..193
        Ident@189..191 "t3"
        Ascii46@191..192 "."
        Ident@192..193 "b"
  Ascii59@193..194 ";"

