crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t2.b FROM (SELECT * FROM prt1 WHERE a < 450) t1 LEFT JOIN (SELECT * FROM prt2 WHERE b > 250) t2 ON t1.a = t2.b WHERE t1.b = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..159
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t2"
      Ascii46@15..16 "."
      Ident@16..17 "b"
  Whitespace@17..18 " "
  From@18..22 "FROM"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  JoinExpr@24..123
    RangeSubselect@24..60
      SelectStmt@24..56
        Select@24..30 "SELECT"
        Whitespace@30..31 " "
        ResTarget@31..32
          ColumnRef@31..32
            AStar@31..32
              Ascii42@31..32 "*"
        Whitespace@32..33 " "
        From@33..37 "FROM"
        Whitespace@37..38 " "
        RangeVar@38..42
          Ident@38..42 "prt1"
        Whitespace@42..43 " "
        Where@43..48 "WHERE"
        Whitespace@48..49 " "
        AExpr@49..56
          ColumnRef@49..50
            Ident@49..50 "a"
          Whitespace@50..51 " "
          Ascii60@51..52 "<"
          Whitespace@52..53 " "
          AConst@53..56
            Iconst@53..56 "450"
      Ascii41@56..57 ")"
      Whitespace@57..58 " "
      Alias@58..60
        Ident@58..60 "t1"
    Whitespace@60..61 " "
    Left@61..65 "LEFT"
    Whitespace@65..66 " "
    Join@66..70 "JOIN"
    Whitespace@70..71 " "
    Ascii40@71..72 "("
    RangeSubselect@72..108
      SelectStmt@72..104
        Select@72..78 "SELECT"
        Whitespace@78..79 " "
        ResTarget@79..80
          ColumnRef@79..80
            AStar@79..80
              Ascii42@79..80 "*"
        Whitespace@80..81 " "
        From@81..85 "FROM"
        Whitespace@85..86 " "
        RangeVar@86..90
          Ident@86..90 "prt2"
        Whitespace@90..91 " "
        Where@91..96 "WHERE"
        Whitespace@96..97 " "
        AExpr@97..104
          ColumnRef@97..98
            Ident@97..98 "b"
          Whitespace@98..99 " "
          Ascii62@99..100 ">"
          Whitespace@100..101 " "
          AConst@101..104
            Iconst@101..104 "250"
      Ascii41@104..105 ")"
      Whitespace@105..106 " "
      Alias@106..108
        Ident@106..108 "t2"
    Whitespace@108..109 " "
    On@109..111 "ON"
    Whitespace@111..112 " "
    AExpr@112..123
      ColumnRef@112..116
        Ident@112..114 "t1"
        Ascii46@114..115 "."
        Ident@115..116 "a"
      Whitespace@116..117 " "
      Ascii61@117..118 "="
      Whitespace@118..119 " "
      ColumnRef@119..123
        Ident@119..121 "t2"
        Ascii46@121..122 "."
        Ident@122..123 "b"
  Whitespace@123..124 " "
  Where@124..129 "WHERE"
  Whitespace@129..130 " "
  AExpr@130..138
    ColumnRef@130..134
      Ident@130..132 "t1"
      Ascii46@132..133 "."
      Ident@133..134 "b"
    Whitespace@134..135 " "
    Ascii61@135..136 "="
    Whitespace@136..137 " "
    AConst@137..138
      Iconst@137..138 "0"
  Whitespace@138..139 " "
  SortBy@139..152
    Order@139..144 "ORDER"
    Whitespace@144..145 " "
    By@145..147 "BY"
    Whitespace@147..148 " "
    ColumnRef@148..152
      Ident@148..150 "t1"
      Ascii46@150..151 "."
      Ident@151..152 "a"
  Ascii44@152..153 ","
  Whitespace@153..154 " "
  SortBy@154..158
    ColumnRef@154..158
      Ident@154..156 "t2"
      Ascii46@156..157 "."
      Ident@157..158 "b"
  Ascii59@158..159 ";"

