crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t2.b FROM prt1 t1, prt2 t2 WHERE t1::text = t2::text AND t1.a = t2.b ORDER BY t1.a;"
---
SelectStmt@0..96
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t2"
      Ascii46@15..16 "."
      Ident@16..17 "b"
  Whitespace@17..18 " "
  From@18..22 "FROM"
  Whitespace@22..23 " "
  RangeVar@23..30
    Ident@23..27 "prt1"
    Whitespace@27..28 " "
    Alias@28..30
      Ident@28..30 "t1"
  Ascii44@30..31 ","
  Whitespace@31..32 " "
  RangeVar@32..39
    Ident@32..36 "prt2"
    Whitespace@36..37 " "
    Alias@37..39
      Ident@37..39 "t2"
  Whitespace@39..40 " "
  Where@40..45 "WHERE"
  Whitespace@45..46 " "
  BoolExpr@46..81
    AExpr@46..65
      TypeCast@46..54
        ColumnRef@46..48
          Ident@46..48 "t1"
        Typecast@48..50 "::"
        TypeName@50..54
          TextP@50..54 "text"
      Whitespace@54..55 " "
      Ascii61@55..56 "="
      Whitespace@56..57 " "
      TypeCast@57..65
        ColumnRef@57..59
          Ident@57..59 "t2"
        Typecast@59..61 "::"
        TypeName@61..65
          TextP@61..65 "text"
    Whitespace@65..66 " "
    And@66..69 "AND"
    Whitespace@69..70 " "
    AExpr@70..81
      ColumnRef@70..74
        Ident@70..72 "t1"
        Ascii46@72..73 "."
        Ident@73..74 "a"
      Whitespace@74..75 " "
      Ascii61@75..76 "="
      Whitespace@76..77 " "
      ColumnRef@77..81
        Ident@77..79 "t2"
        Ascii46@79..80 "."
        Ident@80..81 "b"
  Whitespace@81..82 " "
  SortBy@82..95
    Order@82..87 "ORDER"
    Whitespace@87..88 " "
    By@88..90 "BY"
    Whitespace@90..91 " "
    ColumnRef@91..95
      Ident@91..93 "t1"
      Ascii46@93..94 "."
      Ident@94..95 "a"
  Ascii59@95..96 ";"

