crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@94.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt1_m_p1 PARTITION OF prt1_m FOR VALUES FROM (0, 0) TO (250, 250);"
---
CreateStmt@0..80
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt1_m_p1"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt1_m"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..78
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..61
      Iconst@60..61 "0"
    Ascii44@61..62 ","
    Whitespace@62..63 " "
    AConst@63..64
      Iconst@63..64 "0"
    Ascii41@64..65 ")"
    Whitespace@65..66 " "
    To@66..68 "TO"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..73
      Iconst@70..73 "250"
    Ascii44@73..74 ","
    Whitespace@74..75 " "
    AConst@75..78
      Iconst@75..78 "250"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

